modal-menu added

--- a/index.html
+++ b/index.html
@@ -538,6 +538,65 @@
         </form>
       </div>
     </div>
-    <div class="modal-menu is-open"></div>
+    <div class="modal-menu is-open">
+      <nav class="menu-nav">
+        <button class="close-button" type="button">
+          <svg width="8" height="8" class="svg-close">
+            <use href="./images/icons.svg#icon-close"></use>
+          </svg>
+        </button>
+        <ul class="menu-nav-ul">
+          <li><a class="menu-nav-ul-a" href="#solutions">Solutions</a></li>
+          <li><a class="menu-nav-ul-a" href="#portfolio">Portfolio</a></li>
+          <li><a class="menu-nav-ul-a" href="#">Contacts</a></li>
+        </ul>
+      </nav>
+      <address class="menu-nav-address">
+        <ul class="nav-right-ul">
+          <li>
+            <a class="navright-li" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a class="navright-li" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
+          </li>
+        </ul>
+      </address>
+      <div>
+        <ul class="footer-left-ul">
+          <li class="footer-left-li">
+            <a class="footer-left-li-a" href="">
+              <svg width="24" height="24" class="footer-svg">
+                <use href="./images/icons.svg#icon-instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer-left-li">
+            <a class="footer-left-li-a" href="">
+              <svg width="24" height="24" class="footer-svg">
+                <use href="./images/icons.svg#icon-twitter"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer-left-li">
+            <a class="footer-left-li-a" href="">
+              <svg width="24" height="24" class="footer-svg">
+                <use href="./images/icons.svg#icon-facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer-left-li">
+            <a class="footer-left-li-a" href="">
+              <svg width="24" height="24" class="footer-svg">
+                <use href="./images/icons.svg#icon-linkedin"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
   </body>
 </html>
